force-app/main/default/objects/Destination__c/Destination__c.object-meta.xml
<CustomObject>
    <label>Destination</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Id Destination</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Destinations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>