force-app/main/default/objects/Destination__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>אזור</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>צפון אמריקה</fullName>
            </value>
            <value>
                <fullName>דרום ומרכז אמריקה</fullName>
            </value>
            <value>
                <fullName>המזרח דרום ומזרח אסיה</fullName>
            </value>
            <value>
                <fullName>אירופה</fullName>
            </value>
            <value>
                <fullName>אירופה מזרח ובלקן</fullName>
            </value>
            <value>
                <fullName>אפריקה</fullName>
            </value>
            <value>
                <fullName>אוקייניה</fullName>
            </value>
            <value>
                <fullName>קטבים</fullName>
            </value>
            <value>
                <fullName>ישראל</fullName>
            </value>
            <value>
                <fullName>מרכז אסיה</fullName>
            </value>
            <value>
                <fullName>דרום מערב אסיה</fullName>
            </value>
            <value>
                <fullName>מערב אסיה</fullName>
            </value>
            <value>
                <fullName>מרכז אמריקה</fullName>
            </value>
            <value>
                <fullName>דרום אמריקה</fullName>
            </value>
            <value>
                <fullName>מזרח</fullName>
            </value>
            <value>
                <fullName>מערב אירופה</fullName>
            </value>
            <value>
                <fullName>מזרח אירופה והבלקן</fullName>
            </value>
            <value>
                <fullName>(אוקייניה (אוסטרליה / ניוזילנד</fullName>
                <isActive>false</isActive>
                <label>(אוקייניה (אוסטרליה / ניוזילנד</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>