force-app/main/default/objects/Destination__c/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <label>מדינות</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ברזיל</fullName>
            </value>
            <value>
                <fullName>ארגנטינה</fullName>
            </value>
            <value>
                <fullName>בוליביה</fullName>
            </value>
            <value>
                <fullName>צ&apos;ילה</fullName>
            </value>
            <value>
                <fullName>קולומביה</fullName>
            </value>
            <value>
                <fullName>פרו</fullName>
            </value>
            <value>
                <fullName>מקסיקו</fullName>
            </value>
            <value>
                <fullName>קובה</fullName>
            </value>
            <value>
                <fullName>קוסטה ריקה</fullName>
            </value>
            <value>
                <fullName>גואטמלה</fullName>
            </value>
            <value>
                <fullName>הרפובליקה הדומיניקנית</fullName>
            </value>
            <value>
                <fullName>אקוודור</fullName>
            </value>
            <value>
                <fullName>פנמה</fullName>
            </value>
            <value>
                <fullName>ונצואלה</fullName>
            </value>
            <value>
                <fullName>אורוגוואי</fullName>
            </value>
            <value>
                <fullName>פרגוואי</fullName>
            </value>
            <value>
                <fullName>איי ג&apos;ורג&apos;יה</fullName>
            </value>
            <value>
                <fullName>איי סנדוויץ&apos;</fullName>
            </value>
            <value>
                <fullName>אל סלוודור</fullName>
            </value>
            <value>
                <fullName>בליז</fullName>
            </value>
            <value>
                <fullName>הונדורס</fullName>
            </value>
            <value>
                <fullName>ניקרגואה</fullName>
            </value>
            <value>
                <fullName>(אי הפסחא (צ&apos;ילה</fullName>
            </value>
            <value>
                <fullName>(איי פוקלנד (הממלכה המאוחדת</fullName>
            </value>
            <value>
                <fullName>(גיאנה הצרפתית (צרפת</fullName>
            </value>
            <value>
                <fullName>גיאנה</fullName>
            </value>
            <value>
                <fullName>סורינאם</fullName>
            </value>
            <value>
                <fullName>הודו</fullName>
            </value>
            <value>
                <fullName>תאילנד</fullName>
            </value>
            <value>
                <fullName>נפאל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>