force-app/main/default/objects/Destination__c/fields/TransactionCard__c.field-meta.xml
<CustomField>
    <fullName>TransactionCard__c</fullName>
    <label>כרטיס עסקה</label>
    <referenceTo>Transaction_Card__c</referenceTo>
    <relationshipLabel>Destinations</relationshipLabel>
    <relationshipName>Destinations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>